# refineRGB

./: LICENSE  README.md  setup.cfg
examples/: example01_cube.py  example01_pipes.py  example02_cantilever.py  example03_topo.py  example04_topo2.py  example05_bracket.py  example06_topo3.py
examples/example01_cube/: cone.stl  cube.vtk  cube_runtime.xlsx  cube_runtime_study01.xlsx  initial.pvsm  iterations.pvsm  iterations2.pvsm  iterations3.pvsm  mapping_volume.pvsm  quality.pvsm  quality_old.pvsm  quality_old_old.pvsm  regions.pvsm  regions_new.pvsm  transition.pvsm
examples/example01_pipes/: cube_B_01.vtk  cube_B_02.vtk  cube_B_03.vtk  cube_B_04.vtk  cube_B_05.vtk  cube_B_06.vtk  cube_RGB_00.vtk  cube_RGB_01.vtk  cube_RGB_02.vtk  cube_RGB_03.vtk  cube_runtime.xlsx  cylinder.stl  initial.pvsm  paraview.pvsm  quality.pvsm  transition.pvsm
examples/example02_cantilever/: initial.pvsm  paraview.pvsm  quality.pvsm  regions.pvsm  sample02_3D_job.inp  sample02_3D_job_RGB_00.vtk  sample02_3D_job_RGB_01.vtk  sample02_3D_tosca_distribution.inp  sample03_3D_C3D4.inp  sample03_3D_C3D4_RGB_00.vtk  sample03_3D_C3D4_RGB_01.vtk  sample03_3D_C3D4_tosca_distribution.inp  sample06_C3D4_cantilever_line.inp  sample06_C3D4_cantilever_line_RGB_00.vtk  sample07_cantilever_beam.inp  sample07_cantilever_beam.vtk  sample07_cantilever_beam_runtime.xlsx
examples/example03_topo/: paraview.pvsm  quality.pvsm  smooth_033_3D_inside.vtk  smooth_033_3D_offset_1.vtk  smooth_033_3D_offset_2.vtk  smooth_033_offset_1.vtk  topo_opt_job.vtk  topo_opt_job_C3D4.vtk  topo_opt_job_runtime.xlsx
(+37 files in other folders)
