[metadata]
name = refineRGB
version = 0.0.1
author = Jonas Keller
author_email = jonaskeller14@googlemail.com
description = tools for mesh refinement and manipulation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/jonaskeller14/refineRGB
project_urls =
    Code=https://github.com/jonaskeller14/refineRGB
    Issues=https://github.com/jonaskeller14/refineRGB/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
keywords =
    mesh
    refinement
    red-green
    engineering
    fem
    finite elements

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    meshio
    pymapping

[options.packages.find]
where = src